# youtube-transcript-mcp

./: .gitignore  README.md  pyproject.toml  server.py
