[project]
name = "youtube-transcript-mcp"
version = "0.1.0"
description = "YouTube Transcript Explorer for MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "youtube-transcript-api>=0.6.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
youtube-transcript-mcp = "youtube_transcript_mcp.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["youtube_transcript_mcp"]
